[REFACTO] grosse refacto de plusieur details sensor -> measure, log des erreurs, code en anglais...
