# cmd/restServer/RestServer.go
@@ -1,7 +1,7 @@
 package main
 
 import (
-	"fmt"
+	"log"
 	"net/http"
 
 	"foo.org/myapp/internal/web/rest"
@@ -13,11 +13,11 @@ func main() {
 	//TODO : ajouter les bornes date en paramètre
 	router.HandleFunc("/data/{sensorType}", rest.GetBySensorType)
 	router.HandleFunc("/data/{sensorType}/{date1}/{date2}", rest.GetBySensorTypeBetweenDate)
-	router.HandleFunc("/average/{airportId}/{date}", rest.GetMoyenneAllDataForADay)
-	router.HandleFunc("/average/{date}", rest.GetMoyenneAllDataForADay)
+	router.HandleFunc("/average/{airportIATA}/{date}", rest.GetAverageOfAllMeasureByADay)
+	router.HandleFunc("/average/{date}", rest.GetAverageOfAllMeasureByADay)
 	err := http.ListenAndServe(":8080", router)
 	if err != nil {
-		fmt.Println(err)
+		log.Fatal(err)
 		return
 	}
 }
