# internal/entities/MeasureAvg.go
@@ -1,6 +1,6 @@
 package entities
 
-type SensorAvg struct {
+type MeasureAvg struct {
 	WindAverage        float32 `json:"wind_average"`
 	TemperatureAverage float32 `json:"temperature_average"`
 	PressureAverage    float32 `json:"pressure_average"`
