# internal/entities/MeasureValue.go
@@ -1,7 +1,7 @@
 package entities
 
-type SensorValue struct {
-	AirportID     string  `json:"airport_id"`
+type MeasureValue struct {
+	AirportIATA   string  `json:"airport_iata"`
 	Date          string  `json:"date"`
 	MeasureNature string  `json:"measure_nature"`
 	SensorId      int     `json:"sensor_id"`
